Finishes thing with removing unnecessary smart pointers

--- a/RAB_Labyrinth/RAB_Labyrinth.vcxproj.filters
+++ b/RAB_Labyrinth/RAB_Labyrinth.vcxproj.filters
@@ -107,9 +107,6 @@
     <ClInclude Include="GameObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Component.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Hero.h">
       <Filter>Header Files\GameObjects</Filter>
     </ClInclude>
@@ -121,6 +118,9 @@
     </ClInclude>
     <ClInclude Include="GameSettings.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>Header Files\Components</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
